# pipeops-rust

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
